finished project. Need to include project images and github link, fix js for mouseover and contrast mode

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
   font-family: 'Roboto', sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 li {
   list-style-type: none;
 }
@@ -20,7 +24,8 @@ a {
 }
 
 section {
-  background-color: rb(245,245,245);
+  background-color: rgb(245,245,245);
+  transition: all 300ms ease;
 }
 
 button {
@@ -58,6 +63,8 @@ input:hover, textarea:hover {
 input:focus, textarea:focus {
   border-color: #f06449;
 }
+
+
 
 .container {
   padding: 50px 0;
@@ -124,6 +131,53 @@ input:focus, textarea:focus {
 .link__hover-effect:hover:after {
   left: 0;
   width: 100%;
+}
+
+.nav,
+.scroll,
+.header {
+  opacity: 1;
+  visibility: visible;
+  transition: all 600ms 800ms;
+}
+
+.modal--open nav,
+.modal--open .scroll,
+.modal--open .header {
+  opacity: 0;
+  visibility: hidden;
+  transition: all 400ms
+}
+
+.dark-theme .title,
+.dark-theme .section__title,
+.dark-theme .section__subtitle,
+.dark-theme .nav__link--anchor,
+.dark-theme .fa-adjust,
+.dark-theme .header__para {
+  color: white;
+}
+
+.dark-theme section {
+  background-color: #242424;
+}
+
+.dark-theme .scroll__icon {
+  border-color: white;
+}
+
+.dark-theme .scroll__icon:after,
+.dark-theme .link__hover-effect--black:after {
+  background-color: white;
+}
+.dark-theme .scroll__icon:after,
+.dark-theme .link__hover-effect--white:after {
+  background-color: #242424;
+}
+
+.dark-theme .mail__btn {
+  background-color: white;
+  color: #242424;
 }
 
 /* LANDING PAGE */
@@ -222,6 +276,7 @@ input:focus, textarea:focus {
 #personal-logo {
   width: 80px;
   height: 80px;
+  filter: invert(-1);
   }
 
 nav {
@@ -265,6 +320,22 @@ nav {
   box-shadow: 0 20px 80px 0 rgb(0,0,0,0.55);
   overflow: hidden;
   display: flex;
+  visibility: hidden;
+  z-index: -1;
+  transition: visible 300ms, z-index 1s box-shadow 0.3 ease;
+  opacity: 0;
+}
+
+.modal__about {
+  background-color: rgb(245,245,245);
+  transform: translateX(-110%)
+}
+
+.modal--open{
+  z-index: 60;
+  box-shadow: 0 20px 80px rgb(0,0,0,0.55);
+  visibility: visible;
+  opacity: 1;
 }
 
 .modal__half {
@@ -274,7 +345,15 @@ nav {
   flex-direction: column;
   justify-content: center;
   position: relative;
+  transition: all 200ms ease-in;
 }
+
+.modal--open .modal__about,
+.modal-open .modal__contact {
+  transform: translateX(0%)
+}
+
+
 
 .modal__languages {
   display: flex;
@@ -391,6 +470,7 @@ nav {
 
 .modal__overlay--visible {
   z-index: 1;
+  display: flex;
 }
 .icon {
   animation: spinner 750ms infinite linear;
@@ -496,6 +576,7 @@ nav {
 
 /* Footer */
 footer {
+  position: relative;
   background-color: #242424;
   display: flex;
 }
@@ -523,4 +604,96 @@ footer {
 .footer__social--link,
 .footer__copyright {
   color: white;
+}
+
+/* SHAPES */
+.shape {
+  position: fixed;
+}
+.shape--0{
+  top: 30vh;
+  left: 5vw;
+}
+.shape--1{
+  top: 30vh;
+  left: 50vw;
+}
+.shape--2{
+  top: 30vh;
+  left: 80vw;
+}
+.shape--3{
+  top: 50vh;
+  left: 5vw;
+}
+.shape--4{
+  top: 50vh;
+  left: 50vw;
+}
+.shape--5{
+  top: 50vh;
+  left: 80vw;
+}
+.shape--6{
+  top: 80vh;
+  left: 5vw;
+}
+.shape--7{
+  top: 80vh;
+  left: 50vw;
+}
+.shape--8{
+  top: 80vh;
+  left: 80vw;
+}
+
+/* Small phones, tables, large smart phones*/
+@media (max-width: 768px) {
+  .title {
+    font-size: 80px;
+  }
+  .header__para {
+    font-size: 20px;
+  }
+  .modal {
+    top: 0;
+    left: 0;
+    transform: none;
+    height: auito;
+    width: 100%;
+    flex-direction: column-reverse;
+    border-radius: 0;
+  }
+
+  .modal__half {
+    width:100%
+  }
+}
+
+/* Small Phones*/
+@media (max-width: 480px){
+  .title {
+    font-size:52px
+  }
+  .header__para {
+    font-size:18px
+  }
+  .nav__link:first-child {
+    display: none;
+  }
+  .project__description--para {
+    display:none
+  }
+  .project__description{
+    left: 0;
+    padding: 0;
+    width: 100%;
+    text-align: center;
+  }
+  .project__description--sub-title {
+    margin-bottom: 8px;
+  }
+  modal__half {
+    padding: 40px;
+  }
 }
